syntax = "proto3";
package cereal;
option go_package = "github.com/illuscio-dev/protoCereal-go/messagesCereal";

// Wrapper type for Raw binary data for ease of type-based marshalling and
// unmarshalling.
message RawData {
  // Raw data bytes go here.
  bytes data = 1;
}